<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="15dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1"
    android:screenOrientation="portrait">

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <com.larswerkman.holocolorpicker.OpacityBar
        android:id="@+id/opacitybar"
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/tableRow3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_delay"
            android:id="@+id/textDelay"
            android:maxHeight="50dp"
            android:layout_marginLeft="5dp"
            android:layout_column="0"
            android:layout_gravity="center" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="33dp"
            android:id="@+id/seekBar"
            android:minWidth="200dp"
            android:indeterminate="false"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:minHeight="42dp"
            android:progressTint="#0040ff"
            android:max="5000"
            android:progress="500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/DelayValueText"
            android:layout_gravity="center"
            android:layout_marginLeft="-39dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/DelayValueText" />
    </TableRow>

    <Button
            android:id="@+id/button1"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/changecolor"
        android:layout_gravity="center"
            android:layout_marginTop="12dp" />

    <TableRow
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginBottom="14dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#11fe00" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView3"
            android:textAlignment="center"
            android:textColor="#0011ff"
            android:layout_gravity="center" />
    </TableRow>

</LinearLayout>